--- a/index.html
+++ b/index.html
@@ -491,6 +491,70 @@
         </div>
     </section>
     <!-- =======================================================testimonial part end=======================================================-->
+    <!-- =======================================================your project part start=======================================================-->
+    <section class="your_project">
+        <div class="container">
+            <div class="row your_project_bg ">
+                <div class="col-xl-6">
+                    <div class="your_project_adress">
+                        <h2 class="font-work font-sb font-38">Let’s discuss your Project</h2>
+                        <p class="font-work font-r font-18">There are many variations of passages of Lorem Ipsu
+                            available. but the majority have suffered
+                            alte. </p>
+                        <div class="your_project_info">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <div class="your_project_content">
+                                <h6 class="font-work font-r font-14">Address:</h6>
+                                <address class="font-work font-m font-16">New Mexico 31134</address>
+                            </div>
+                        </div>
+                        <div class="your_project_info">
+                            <i class="fa-regular fa-envelope"></i>
+                            <div class="your_project_content">
+                                <h6 class="font-work font-r font-14">My Email:</h6>
+                                <a href="mailto:mymail@mail.com" class="font-work font-m font-16">mymail@mail.com</a>
+                            </div>
+                        </div>
+                        <div class="your_project_info">
+                            <i class="fa-solid fa-phone"></i>
+                            <div class="your_project_content">
+                                <h6 class="font-work font-r font-14">Call Me Now:</h6>
+                                <a href="tel:00-1234 00000" class="font-work font-m font-16">00-1234 00000</a>
+                            </div>
+                        </div>
+                        <div class="your_project_icon">
+                            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href=""><i class="fa-brands fa-dribbble"></i></a>
+                            <a href=""><i class="fa-brands fa-behance"></i></a>
+                            <a href=""><i class="fa-brands fa-instagram"></i></a>
+                            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 your_project_title">
+                    <h2 class="font-work font-r font-18">There are many variations of passages of Lorem Ipsu available,
+                        but the majority have suffered alte.</h2>
+                    <div class="your_project_form">
+                        <form action="" method="get">
+                            <input type="text" placeholder="Name*" required>
+                            <input type="email" placeholder="Email*" required>
+                            <input type="text" placeholder="Location">
+                            <div class="your_project_form_width">
+                                <input type="number" placeholder="Budget*" required>
+                                <input type="text" placeholder="Subject*" required>
+                            </div>
+                            <textarea placeholder="Massage*" cols="1" rows="1"></textarea>
+                            <button class="font-work font-sb font-16">submit <i
+                                    class="fa-solid fa-arrow-right-to-bracket"></i></button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer></footer>
+    </section>
+    <!-- =======================================================your project part end=======================================================-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
