--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- =========================================css part Start================================================= -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <!-- =========================================css part End=========================================== -->
 </head>
 
@@ -552,7 +553,31 @@
                 </div>
             </div>
         </div>
-        <footer></footer>
+        <footer>
+            <div class="container">
+                <div class="d-flex footer_custom_css">
+                    <div class="footer_logo">
+                        <picture>
+                            <img src="./images/footer logo.png" alt="logo">
+                        </picture>
+                    </div>
+                    <div class="footer_menu">
+                        <ul>
+                            <li><a href="" class="font-work font-r font-16">Home</a></li>
+                            <li><a href="" class="font-work font-r font-16">About</a></li>
+                            <li><a href="" class="font-work font-r font-16">Services</a></li>
+                            <li><a href="" class="font-work font-r font-16">Process</a></li>
+                            <li><a href="" class="font-work font-r font-16">Portfolio</a></li>
+                            <li><a href="" class="font-work font-r font-16">Blog</a></li>
+                            <li><a href="" class="font-work font-r font-16">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer_copyright">
+                        <h6 class="font-work font-r font-16">Copyright © 2022 Picto.</h6>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </section>
     <!-- =======================================================your project part end=======================================================-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
