--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <a href="" class="font-work font-sb font-16">Say Hello!</a>
                         </div>
                         <div class="banner_info">
-                            <div class="d-flex">
+                            <div class="banner_custom_flex ">
                                 <div class="banner_item">
                                     <h4 class="font-work font-sb font-32">5Y.</h4>
                                     <h5 class="font-work font-r font-16">Experience</h5>
@@ -162,58 +162,56 @@
                     </div>
                 </div>
                 <div class="col-xl-6">
-                    <div class="process_requirement">
-                        <div class="row">
-                            <div class="col-xl-6">
-                                <div class="process_item">
-                                    <div class="process_icon">
-                                        <i class="fa-solid fa-square-poll-horizontal"></i>
-                                    </div>
-                                    <div class="process_info">
-                                        <h4 class="font-work font-sb font-20">1. Analysis of Requirement</h4>
-                                        <p class="font-work font-r font-16">Before Start, it is essential to gather the
-                                            requirements in this very first
-                                            phase</p>
-                                    </div>
+                    <div class="row process_custom_gap">
+                        <div class="col-xl-6">
+                            <div class="process_item">
+                                <div class="process_icon">
+                                    <i class="fa-solid fa-square-poll-horizontal"></i>
+                                </div>
+                                <div class="process_info">
+                                    <h4 class="font-work font-sb font-20">1. Analysis of Requirement</h4>
+                                    <p class="font-work font-r font-16">Before Start, it is essential to gather the
+                                        requirements in this very first
+                                        phase</p>
                                 </div>
                             </div>
-                            <div class="col-xl-6">
-                                <div class="process_item">
-                                    <div class="process_icon">
-                                        <i class="fa-solid fa-chart-line"></i>
-                                    </div>
-                                    <div class="process_info">
-                                        <h4 class="font-work font-sb font-20">2. Design</h4>
-                                        <p class="font-work font-r font-16">Design is the next phase. In this stage, the
-                                            draft design is prepared based
-                                            on requirment</p>
-                                    </div>
+                        </div>
+                        <div class="col-xl-6">
+                            <div class="process_item">
+                                <div class="process_icon">
+                                    <i class="fa-solid fa-chart-line"></i>
+                                </div>
+                                <div class="process_info">
+                                    <h4 class="font-work font-sb font-20">2. Design</h4>
+                                    <p class="font-work font-r font-16">Design is the next phase. In this stage, the
+                                        draft design is prepared based
+                                        on requirment</p>
                                 </div>
                             </div>
-                            <div class="col-xl-6">
-                                <div class="process_item">
-                                    <div class="process_icon">
-                                        <i class="fa-solid fa-pen"></i>
-                                    </div>
-                                    <div class="process_info">
-                                        <h4 class="font-work font-sb font-20">3. Development </h4>
-                                        <p class="font-work font-r font-16">After receiving the design documents.This is
-                                            the stage where actual coding
-                                            begins</p>
-                                    </div>
+                        </div>
+                        <div class="col-xl-6">
+                            <div class="process_item">
+                                <div class="process_icon">
+                                    <i class="fa-solid fa-pen"></i>
+                                </div>
+                                <div class="process_info">
+                                    <h4 class="font-work font-sb font-20">3. Development </h4>
+                                    <p class="font-work font-r font-16">After receiving the design documents.This is
+                                        the stage where actual coding
+                                        begins</p>
                                 </div>
                             </div>
-                            <div class="col-xl-6">
-                                <div class="process_item">
-                                    <div class="process_icon">
-                                        <i class="fa-solid fa-laptop"></i>
-                                    </div>
-                                    <div class="process_info">
-                                        <h4 class="font-work font-sb font-20">4. Deployment</h4>
-                                        <p class="font-work font-r font-16">After converted into code then deployed or
-                                            delivered to the customers to be
-                                            used.</p>
-                                    </div>
+                        </div>
+                        <div class="col-xl-6">
+                            <div class="process_item">
+                                <div class="process_icon">
+                                    <i class="fa-solid fa-laptop"></i>
+                                </div>
+                                <div class="process_info">
+                                    <h4 class="font-work font-sb font-20">4. Deployment</h4>
+                                    <p class="font-work font-r font-16">After converted into code then deployed or
+                                        delivered to the customers to be
+                                        used.</p>
                                 </div>
                             </div>
                         </div>
@@ -231,7 +229,7 @@
                 <p class="font-work font-r font-18">There are many variations of passages of Lorem Ipsum available,
                     but the majority have suffered alteration.</p>
             </div>
-            <div class="row">
+            <div class="row portfolio_custom_gap">
                 <div class="col-xl-4">
                     <div class="portfolio_custom_card">
                         <div class="portfolio_img">
