--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section class="banner">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6">
+                <div class="col-xl-6 banner_content_custom__css">
                     <div class="banner_content">
                         <h1 class="font-work font-sb font-72">Hello, I’m FOZLE RABBI</h1>
                         <p class="font-work font-r font-18">I am MERN Stack Developer and AWS Solution Architect and
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-xl-6 banner_img_custom_css">
                     <div class="banner_img">
                         <picture>
                             <img src="./images/img/1st img.png" alt="img" loading="lazy">
@@ -378,7 +378,7 @@
     <!-- =======================================================development part start=======================================================-->
     <section class="development">
         <div class="container">
-            <div class="d-flex development_bg_color">
+            <div class="row development_bg_color">
                 <div class="col-xl-6 align-self-center">
                     <div class="development_title">
                         <h2 class="font-work font-sb font-48">What I do?</h2>
@@ -485,6 +485,11 @@
                         Morbi ornare elit at libero suscipit porta.”</p>
                     <h3 class="font-pop font-m font-18">Esther Howard</h3>
                     <h4 class="font-pop font-l font-16">Managing Director, ABC company</h4>
+                    <div class="testimonial_circle">
+                        <a href=""></a>
+                        <a href=""></a>
+                        <a href=""></a>
+                    </div>
                 </div>
             </div>
         </div>
