--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="col-xl-6 banner_img_custom_css">
                     <div class="banner_img">
                         <picture>
-                            <img src="./images/img/1st img.png" alt="img" loading="lazy">
+                            <img src="./images/img/1st_img.png" alt="img" loading="lazy">
                         </picture>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                 <div class="col-xl-6">
                     <div class="about_img d-flex justify-content-center align-items-center">
                         <picture>
-                            <img src="./images/img/2nd img.png" alt="image" loading="lazy">
+                            <img src="./images/img/2nd_img.png" alt="image" loading="lazy">
                         </picture>
                         <div class="about_icon">
                             <a href=""><i class="fa-brands fa-facebook-f"></i></a>
@@ -434,32 +434,32 @@
             <div class="happy_client_img">
                 <div class="client_picture">
                     <picture>
-                        <img src="./images/Logo/google.png" alt="logo-1" width="145px" height="45px">
+                        <img src="./images/Logo/google.png" alt="logo-1" width="145" height="45">
                     </picture>
                 </div>
                 <div class="client_picture">
                     <picture>
-                        <img src="./images/Logo/dribbble.png" alt="logo-2" width="140px" height="35px">
+                        <img src="./images/Logo/dribbble.png" alt="logo-2" width="140" height="35">
                     </picture>
                 </div>
                 <div class="client_picture">
                     <picture>
-                        <img src="./images/Logo/linkedin.png" alt="logo-3" width="140px" height="37px">
+                        <img src="./images/Logo/linkedin.png" alt="logo-3" width="140" height="37">
                     </picture>
                 </div>
                 <div class="client_picture">
                     <picture>
-                        <img src="./images/Logo/amazon.png" alt="logo-4" width="140px" height="42px">
+                        <img src="./images/Logo/amazon.png" alt="logo-4" width="140" height="42">
                     </picture>
                 </div>
                 <div class="client_picture">
                     <picture>
-                        <img src="./images/Logo/medium.png" alt="logo-5" width="140px" height="28px">
+                        <img src="./images/Logo/medium.png" alt="logo-5" width="140" height="28">
                     </picture>
                 </div>
                 <div class="client_picture">
                     <picture>
-                        <img src="./images/Logo/spotify.png" alt="logo-6" width="140px" height="42px">
+                        <img src="./images/Logo/spotify.png" alt="logo-6" width="140" height="42">
                     </picture>
                 </div>
 
@@ -561,7 +561,7 @@
                 <div class="d-flex footer_custom_css">
                     <div class="footer_logo">
                         <picture>
-                            <img src="./images/footer logo.png" alt="logo">
+                            <img src="./images/footer_logo.png" alt="logo">
                         </picture>
                     </div>
                     <div class="footer_menu">
