--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
                 </div>
             </div>
         </div>
-        </div>
     </section>
     <!-- ====================================================banner part end====================================================================== -->
     <!-- ====================================================about part start====================================================================== -->
@@ -523,7 +522,7 @@
                             <i class="fa-solid fa-phone"></i>
                             <div class="your_project_content">
                                 <h6 class="font-work font-r font-14">Call Me Now:</h6>
-                                <a href="tel:00-1234 00000" class="font-work font-m font-16">00-1234 00000</a>
+                                <a href="tel:00-1234-00000" class="font-work font-m font-16">00-1234 00000</a>
                             </div>
                         </div>
                         <div class="your_project_icon">
@@ -540,7 +539,7 @@
                     <h2 class="font-work font-r font-18">There are many variations of passages of Lorem Ipsu available,
                         but the majority have suffered alte.</h2>
                     <div class="your_project_form">
-                        <form action="" method="get">
+                        <form action="#" method="get">
                             <input type="text" placeholder="Name*" required>
                             <input type="email" placeholder="Email*" required>
                             <input type="text" placeholder="Location">
