--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Work+Sans:wght@300;400;500;600&display=swap"
         rel="stylesheet">
     <!-- ============================================google fonts End=========================================== -->
-    <title>Bootstrap demo</title>
+    <title>Personal Portfolio</title>
     <!-- =============================================font awsome Start============================================ -->
     <script src="https://kit.fontawesome.com/24f75511dc.js" crossorigin="anonymous"></script>
     <!-- =============================================font awsome end============================================ -->
